fixed alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,13 +11,11 @@ body {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    position: -webkit-sticky;
-    position: sticky;
     top: 0;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    background-position: 80%;
+    background-position: 100%;
     z-index: 9999;
   }
 
@@ -52,7 +50,6 @@ body {
 
   header nav ul li a {
     padding: 10px 25px;
-    font-weight: lighter;
     font-size: 1.55vw;
     text-shadow: 5px 5px 5px rgba(255, 255, 255, 0.7);
   }
@@ -100,7 +97,20 @@ body {
   background-color: black;
   background-size: cover;
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  width: 100%;
+  height: 200px;
+  justify-content: center;
+}
+
+.flex-row {
+  border-left: 6px solid #42a8fc;
+  flex:  70%;
+  margin: 20px
+}
+
+.flex-flow {
+  flex: 30%;
 }
 
 .intro h2 {
@@ -109,19 +119,17 @@ body {
   padding: 20px;
   background-color: black;
   background-size: cover;
-  margin: 30px 10px 30px 100px;
   text-align: right;
+  flex: 1 30%;
 }
 
 .intro p {
   line-height: 1.7;
   color: #42a8fc;
-  border-left: 6px solid #42a8fc;
-  width: 70%;
-  margin: 30px 0;
   font-size: 20px;
   text-align: center;
-  padding: 30px;
+  padding: 30px 30px;
+  max-width: fit-content;
 }
 
 /* ABOUT ME STYLES END */
@@ -132,7 +140,8 @@ body {
   background-color: black;
   background-size: cover;
   display: flex;
-  justify-content: space-around;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .projects h2 {
@@ -141,17 +150,23 @@ body {
   padding: 20px;
   background-color: black;
   background-size: cover;
-  margin: 30px 10px 30px 100px;
   text-align: right;
+  flex: 1 30%;
 }
 
 .all-projects {
   display: flex;
-  justify-content: normal;
   flex-wrap: wrap;
-  width: 70%;
+  flex-direction: row;
   border-left: 6px solid #42a8fc;
-  padding: 20px;
+  margin: 20px;
+  padding: 10px;
+}
+
+.project-one {
+  flex: 100%;
+  min-width: 100%;
+  height: auto;
 }
 
 .project-one img {
@@ -159,59 +174,63 @@ body {
   margin: 10px;
   opacity: 60%;
   object-fit: cover;
-  flex-shrink: 3;
+  min-width: 97%;
 }
 
 .project img:hover {
-  opacity: 100%
+  opacity: 100%;
 }
+
+/* .project-two, .project-three, .project-four, .project-five {
+  flex: 50%;
+} */
 
 .project-text {
   background-color: #dd43b7;
   color: aliceblue;
   width: 30%;
   padding-bottom: 1px;
-}
+} 
 
 .all-projects h3 {
   padding: 5px 10px 0 10px;
-  font-size: 24px;
-}
+  font-size: 20px;
+} 
 
 .all-projects h4 {
   padding: 0 10px 10px 10px;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: lighter;
-  line-height: 0;
-}
+  line-height: 0.7;
+} 
  
-.project {
+.project-one, .project-two, .project-three, .project-four, .project-five {
   position: relative;
 }
 
-.project .project-text {
+.project-one .project-text, .project-two .project-text, .project-three .project-text, .project-four .project-text, .project-five .project-text {
   position: absolute;
   top: 45%;
   margin: 10px;
 }
 
-.project-two img, .project-three img, .project-four img, .project-five img{
+ .project-two img, .project-three img, .project-four img, .project-five img {
   border:#dd43b7 solid 3px;
   margin: 10px;
   opacity: 60%;
   object-fit: cover;
-}
+  min-width: 50%;
+} 
 
 
-  
 /* CONTACT ME STYLES START */
 
 .contact-info {
   background-color: black;
-  background-size: cover;
   display: flex;
-  justify-content: space-between;
-  padding: 30px;
+  flex-direction: row;
+  justify-content: center;
+
 }
 
 .contact-info h2 {
@@ -220,8 +239,8 @@ body {
   padding: 20px;
   background-color: black;
   background-size: cover;
-  margin: 20px 10px 30px 50px;
   text-align: right;
+  flex: 1 30%;
 }
 
 .contact-info a {
@@ -231,8 +250,7 @@ body {
 
 .anchors {
   border-left: 6px solid #42a8fc;
-  width: 70%;
-  margin: 0px 0px;
+  margin: 10px 0px;
 }
 
 .anchors ul {
